--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>JS</title>
 	<link rel="stylesheet" href="">
+	<style>
+		body {
+			background-color: #282828;
+		}
+	</style>
 </head>
 <body>
 
