--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>JS</title>
-	<link rel="stylesheet" href="">
-	<style>
-		body {
-			background-color: #282828;
-		}
-	</style>
+	<link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
 
