--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,9 +8,60 @@
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>JS</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <h1 class="text-center mt-5 mb-5">TODO LIST</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <form data-todo-form>
+                        <div class="mb-3">
+                            <label
+                                for="exampleFormControlInput1"
+                                class="form-label"
+                                >Task title</label
+                            >
+                            <input
+                                type="text"
+                                name="title"
+                                class="form-control"
+                                id="exampleFormControlInput1"
+                                placeholder="Title"
+                                required
+                            />
+                        </div>
+                        <div class="mb-3">
+                            <label
+                                for="exampleFormControlTextarea1"
+                                class="form-label"
+                                >Task body</label
+                            >
+                            <textarea
+                                name="description"
+                                class="form-control"
+                                id="exampleFormControlTextarea1"
+                                cols="8"
+                                rows="8"
+                                required
+                            ></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <button type="button" class="btn btn-success">
+                                Create Task
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <script src="./../js/script.js"></script>
     </body>
 </html>
