--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <script src="./../js/utils.js"></script>
+        <script src="./../js/users.js"></script>
         <script src="./../js/script.js"></script>
     </body>
 </html>
