--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <div class="container">
+            <div class="wrapper">
+                <table id="myTable" class="table__border"></table>
+            </div>
+        </div>
         <script src="./../js/script.js"></script>
     </body>
 </html>
