--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,14 @@
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <form>
+            <label for="myName">
+                Name :
+                <input type="text" id="myName" />
+            </label>
+        </form>
+
+        <div id="focus"></div>
         <script src="./../js/script.js"></script>
     </body>
 </html>
