--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,11 +14,10 @@
         <form>
             <label for="myName">
                 Name :
-                <input type="text" id="myName" />
+                <input name="name" type="text" id="myName" />
             </label>
         </form>
 
-        <div id="focus"></div>
         <script src="./../js/script.js"></script>
     </body>
 </html>
