--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
                 <input name="name" type="text" id="myName" />
             </label>
         </form>
-
+        <div id="dynamic-content"></div>
         <script src="./../js/script.js"></script>
     </body>
 </html>
