--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,9 +8,96 @@
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>JS</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-4">
+                    <h1>My To-Do List</h1>
+                    <form data-todo-form class="mb-3">
+                        <input
+                            type="text"
+                            name="title"
+                            class="form-control mb-2"
+                            placeholder="Task Title"
+                            required
+                        />
+                        <textarea
+                            name="description"
+                            class="form-control mb-2"
+                            placeholder="Task Description"
+                            required
+                        ></textarea>
+                        <button type="submit" class="btn btn-primary" disabled>
+                            Add Task
+                        </button>
+                    </form>
+                </div>
+                <div id="todoItems" class="todo-list"></div>
+            </div>
+        </div>
+
+        <div
+            class="modal fade"
+            id="editModal"
+            tabindex="-1"
+            aria-labelledby="editModalLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">
+                            Edit Task
+                        </h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                    <div class="modal-body">
+                        <input
+                            type="text"
+                            id="editTitle"
+                            class="form-control mb-2"
+                            placeholder="Edit Task Title"
+                            required
+                        />
+                        <textarea
+                            id="editDescription"
+                            class="form-control mb-2"
+                            placeholder="Edit Task Description"
+                            required
+                        ></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-bs-dismiss="modal"
+                        >
+                            Cancel
+                        </button>
+                        <button
+                            type="button"
+                            class="btn btn-primary"
+                            id="saveChanges"
+                        >
+                            Save changes
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="./../js/script.js"></script>
     </body>
 </html>
