--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,6 @@
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
-        <script src="./../js/script.js"></script>
+        <script src="../js/index.js"></script>
     </body>
 </html>
