--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,10 +7,39 @@
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>JS</title>
+        <title>Search post</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./../style/styles.css" />
     </head>
     <body>
+        <div class="container mt-5">
+            <h1 class="text-center">Пошук поста</h1>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="postIdInput" class="form-label"
+                            >Введіть ID поста (1-100):</label
+                        >
+                        <input
+                            type="number"
+                            id="postIdInput"
+                            class="form-control"
+                            placeholder="Наприклад, 1"
+                        />
+                    </div>
+                    <button id="searchPostBtn" class="btn btn-success w-100">
+                        Знайти пост
+                    </button>
+                    <div id="errorMessage" class="text-danger mt-3"></div>
+                </div>
+            </div>
+
+            <div id="postContainer" class="mt-5"></div>
+        </div>
+
         <script src="./../js/script.js"></script>
     </body>
 </html>
